# julius

./: .gitignore  CMakeLists.txt
JuliusXcode.xcodeproj/: project.pbxproj
JuliusXcode.xcodeproj/xcshareddata/xcschemes/: JuliusXcode.xcscheme
cmake/: FindSDL2.cmake
src/: julius.c  main.c  main.h
src/app/building/: animation.c  animation.h  barracks.c  barracks.h  building.c  building.h  building_state.c  building_state.h  clone.c  construction.c  construction.h  construction_building.c  construction_building.h  construction_clear.c  construction_routed.c  construction_routed.h  construction_warning.c  construction_warning.h  count.c  count.h  destruction.c  destruction.h  dock.c  dock.h  figure.c  government.c  granary.c  granary.h  house.c  house.h  house_evolution.c  house_evolution.h  house_population.c  house_service.c  industry.c  industry.h  list.h  maintenance.c  market.c  market.h  (+9 more)
src/app/city/: buildings.c  buildings.h  culture.c  culture.h  data.c  data.h  data_private.h  emperor.c  entertainment.c  festival.c  figures.c  finance.c  gods.c  health.c  houses.c  labor.c  map.c  map.h  message.c  message.h  migration.c  military.c  mission.c  population.c  ratings.c  ratings.h  resource.c  resource.h  sentiment.c  sound.c  trade.c  victory.c  view.c  view.h  warning.c
src/app/core/: backtrace.c  buffer.c  calc.c  calc.h  config.c  dir.c  encoding.c  encoding.h  encoding_korean.c  encoding_simp_chinese.c  encoding_trad_chinese.c  file.c  file.h  hotkey_config.c  hotkey_config.h  image.c  image.h  io.c  io.h  lang.c  locale.c  random.c  random.h  smacker.c  smacker.h  speed.h  string.c  time.c  zip.c
src/app/editor/: editor.c  tool.c  tool.h  tool_restriction.c  tool_restriction.h
src/app/empire/: city.c  city.h  empire.c  empire.h  object.c  object.h  trade_prices.h  trade_route.h
src/app/figure/: action.c  combat.c  combat.h  enemy_army.c  enemy_army.h  figure.c  figure.h  formation.c  formation.h  formation_enemy.c  formation_enemy.h  formation_herd.c  formation_layout.c  formation_legion.c  formation_legion.h  image.c  image.h  movement.c  movement.h  name.c  name.h  phrase.c  phrase.h  properties.h  route.c  route.h  service.c  service.h  sound.c  sound.h  trader.c  trader.h
src/app/figuretype/: animal.c  animal.h  cartpusher.c  cartpusher.h  crime.c  crime.h  docker.c  docker.h  editor.c  editor.h  enemy.c  enemy.h  entertainer.c  entertainer.h  maintenance.c  maintenance.h  market.c  market.h  migrant.c  migrant.h  missile.c  missile.h  native.c  native.h  service.c  service.h  soldier.c  soldier.h  trader.c  trader.h  wall.c  wall.h  water.c  water.h
src/app/game/: animation.c  cheats.c  difficulty.c  file.c  file_editor.c  file_io.c  game.c  mission.c  orientation.c  resource.c  settings.c  speed.c  state.c  system.h  tick.c  time.h  tutorial.c  tutorial.h  undo.c  undo.h
src/app/graphics/: arrow_button.c  arrow_button.h  button.c  font.c  font.h  generic_button.h  graphics.c  graphics.h  image.c  image.h  image_button.c  image_button.h  lang_text.c  lang_text.h  menu.c  menu.h  panel.c  rich_text.c  rich_text.h  screen.c  screen.h  screenshot.c  scrollbar.c  scrollbar.h  text.c  text.h  tooltip.c  tooltip.h  video.c  warning.c  window.c  window.h
src/app/input/: cursor.c  cursor.h  hotkey.c  hotkey.h  input.c  input.h  joystick.c  joystick.h  keyboard.c  keyboard.h  keys.c  mouse.c  mouse.h  scroll.c  scroll.h  touch.c  touch.h
src/app/map/: aqueduct.c  aqueduct.h  bookmark.c  bookmark.h  bridge.c  building.c  building.h  building_tiles.c  desirability.c  desirability.h  elevation.c  elevation.h  figure.c  figure.h  grid.c  grid.h  image.c  image.h  image_context.c  natives.c  orientation.c  point.c  property.c  property.h  random.c  random.h  ring.c  road_access.c  road_access.h  road_aqueduct.c  road_network.c  routing.c  routing.h  routing_data.h  routing_path.c  routing_terrain.c  soldier_strength.c  sprite.c  sprite.h  terrain.c  (+5 more)
src/app/platform/: cursor.c  cursor.h  file_manager.c  file_manager_cache.c  file_manager_cache.h  joystick.c  keyboard_input.c  log.c  mouse.c  prefs.c  screen.c  screen.h  sound_device.c  touch.c  version.c  virtual_keyboard.c
src/app/scenario/: building.c  criteria.c  criteria.h  data.h  demand_change.c  distant_battle.c  earthquake.c  earthquake.h  editor.c  editor_events.c  editor_map.c  editor_map.h  emperor_change.c  emperor_change.h  empire.c  gladiator_revolt.c  gladiator_revolt.h  invasion.c  invasion.h  map.c  map.h  price_change.c  property.c  random_event.c  request.c  scenario.c  scenario.h
src/app/sound/: city.c  city.h  effect.c  music.c  speech.c  system.c
src/app/translation/: english.c  french.c  german.c  italian.c  korean.c  polish.c  portuguese.c  russian.c  simplified_chinese.c  spanish.c  swedish.c  traditional_chinese.c  translation.c  translation.h
src/app/widget/: city.c  city.h  city_bridge.c  city_bridge.h  city_building_ghost.c  city_building_ghost.h  city_figure.c  city_figure.h  city_overlay.h  city_overlay_education.c  city_overlay_entertainment.c  city_overlay_health.c  city_overlay_other.c  city_overlay_risks.c  city_with_overlay.c  city_with_overlay.h  city_without_overlay.c  city_without_overlay.h  input_box.c  input_box.h  map_editor.c  map_editor.h  map_editor_tool.c  map_editor_tool.h  minimap.c  minimap.h  scenario_minimap.c  top_menu.c  top_menu.h  top_menu_editor.c  top_menu_editor.h
src/app/window/: advisors.c  advisors.h  build_menu.c  building_info.c  cck_selection.c  city.c  config.c  difficulty_options.c  display_options.c  donate_to_city.c  empire.c  file_dialog.c  gift_to_emperor.c  hold_festival.c  hotkey_config.c  hotkey_editor.c  hotkey_editor.h  intermezzo.c  intro_video.c  labor_priority.c  logo.c  main_menu.c  message_dialog.c  message_list.c  military_menu.c  mission_briefing.c  mission_end.c  mission_selection.c  new_career.c  numeric_input.c  overlay_menu.c  popup_dialog.c  (+12 more)
test/: CMakeLists.txt
test/sav/: run.c  sav_compare.c
test/stub/: image.c  input.c  lang.c  log.c  model.c  sound_device.c  ui.c  video.c
test/translation/: check.c
(+72 files in other folders)
